# tightbeam

./: .editorconfig  .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  PROOF.md  README.md  URN_IMPLEMENTATION_SUMMARY.md  cspell.yaml  rustfmt.toml
consumer-test/: Cargo.toml
consumer-test/src/: lib.rs
tightbeam/: Cargo.toml
tightbeam-derive/: Cargo.toml
tightbeam-derive/src/: build.rs  lib.rs
tightbeam-dna/: Cargo.toml
tightbeam-dna/src/: lib.rs
tightbeam-gate/: Cargo.toml
tightbeam-gate/src/: lib.rs
tightbeam-os/: Cargo.toml  README.md
tightbeam-os/src/: lib.rs
tightbeam/fuzz/: complex_workflow.rs  simple_servlet.rs  simple_workflow.rs  verification.rs
tightbeam/fuzz/chess/: board.rs  constants.rs  mod.rs  move.rs  piece.rs  state.rs  utils.rs
tightbeam/fuzz/chess/seeds/: README.md
tightbeam/src/: asn1.rs  client.rs  compose.rs  constants.rs  core.rs  doc.rs  error.rs  flags.rs  frame.rs  helpers.rs  lib.rs  matrix.rs  oids.rs  policy.rs  prelude.rs  random.rs  router.rs  runtime.rs  testing.rs  trace.rs  utils.rs  version.rs
tightbeam/src/builder/: error.rs  frame.rs  metadata.rs  mod.rs
tightbeam/src/colony/: cluster.rs  drone.rs  job.rs  mod.rs  servlet.rs  worker.rs
tightbeam/src/colony/cluster/: builder.rs  error.rs  macros.rs  mod.rs  registry.rs  servlet_registry.rs
tightbeam/src/colony/common/: messages.rs  mod.rs  scaling.rs
tightbeam/src/colony/drone/: error.rs  gates.rs  macros.rs  mod.rs
tightbeam/src/colony/hive/: error.rs  gates.rs  macros.rs  mod.rs
tightbeam/src/colony/servlet/: macros.rs  mod.rs  tracking.rs
tightbeam/src/colony/worker/: macros.rs  mod.rs
tightbeam/src/compress/: mod.rs
tightbeam/src/crypto/: aead.rs  commitment.rs  curves.rs  ecies.rs  hash.rs  kdf.rs  kem.rs  key.rs  mod.rs  negotiation.rs  policy.rs  profiles.rs  secret.rs  sign.rs  utils.rs  x509.rs
tightbeam/src/crypto/x509/: error.rs  mod.rs  policy.rs  store.rs  utils.rs
tightbeam/src/instrumentation/: mod.rs
tightbeam/src/macros/: cfg.rs  client.rs  emit.rs  error.rs  flags.rs  mod.rs  policy.rs  relay.rs  server.rs  x509.rs
tightbeam/src/servlets/: mod.rs
tightbeam/src/standards/: error.rs  mod.rs
tightbeam/src/standards/bip/: mod.rs
tightbeam/src/standards/iso/: mod.rs
tightbeam/src/standards/rfc/: mod.rs  rfc5424.rs
tightbeam/src/testing/: assertions.rs  config.rs  error.rs  export.rs  fault.rs  fuzz.rs  macros.rs  mod.rs  result.rs  schedulability.rs  timing.rs  trace.rs  utils.rs
tightbeam/src/testing/fdr/: config.rs  explorer.rs  mod.rs  tests.rs
tightbeam/src/testing/fmea/: analysis.rs  export.rs  mod.rs  report.rs
tightbeam/src/testing/macros/: compose_spec.rs  gen_states.rs  mod.rs  process_spec.rs  verification_spec.rs
tightbeam/src/testing/specs/: assert.rs  csp.rs  error.rs  fdr.rs  fuzz.rs  l1_spec.rs  mod.rs
tightbeam/src/testing/timing/: constraints.rs  csp.rs  deadline.rs  export.rs  mod.rs  path.rs  verification.rs  violations.rs  wcet.rs
tightbeam/src/trace/: builder.rs  collector.rs  logging.rs  mod.rs
tightbeam/src/transport/: envelopes.rs  error.rs  handshake.rs  io.rs  messaging.rs  mod.rs  multiplex.rs  policy.rs  pool.rs  protocols.rs  state.rs
tightbeam/src/transport/builders/: envelope.rs  mod.rs
tightbeam/src/transport/client/: builder.rs  client.rs  macros.rs  mod.rs  pool.rs
tightbeam/src/transport/handshake/: attributes.rs  common.rs  error.rs  kari.rs  mod.rs  negotiation.rs  state.rs  tests.rs  utils.rs
tightbeam/src/transport/tcp/: async.rs  mod.rs  sync.rs
tightbeam/src/utils/: basis_points.rs  jitter.rs  marker.rs  math.rs  mod.rs  statistics.rs  urn.rs
tightbeam/src/utils/task/: job.rs  mod.rs  pipeline.rs
tightbeam/src/utils/urn/: error.rs  macros.rs  mod.rs  spec.rs
tightbeam/tests/: container.rs  fuzzing.rs  instrumentation.rs  proof.rs  suite.rs  tightbeam.rs  transport.rs  ui.rs  x509_gate.rs
tightbeam/tests/colony/: cluster.rs  hive.rs  mod.rs  servlet.rs  worker.rs
tightbeam/tests/common/: mod.rs  security.rs  x509.rs
tightbeam/tests/compile/: algorithm_mismatch.rs  algorithm_mismatch.stderr
tightbeam/tests/dtn/: bms.rs  certs.rs  chain_processor.rs  clock.rs  command_executor.rs  delay.rs  delay_tolerant.rs  fault_manager.rs  fault_matrix.rs  faults.rs  frame_builder.rs  messages.rs  mod.rs  ordering.rs  servlets.rs  storage.rs  types.rs  ultimate.rs  utils.rs
tightbeam/tests/dtn/jobs/: build_gap_recovery_frame.rs  contexts.rs  create_frame_request.rs  emit_frame_to_network.rs  finalize_chain_outgoing.rs  finalize_chain_update.rs  mod.rs  persist_and_buffer_frame.rs  prepare_gap_recovery.rs  validate_chain.rs
tightbeam/tests/dtn/workers/: command_ack_handler.rs  command_execution.rs  frame_request_handler.rs  frame_response_handler.rs  messages.rs  mission_control_telemetry_handler.rs  mod.rs  rover_command_handler.rs  telemetry_builder.rs
tightbeam/tests/fault/: basic.rs  mod.rs
tightbeam/tests/fdr/: diners.rs  mod.rs  tennis.rs  trace_analysis.rs
tightbeam/tests/fmea/: basic.rs
tightbeam/tests/fuzz/: chess_engine.rs  complex_workflow.rs  mod.rs  simple_servlet.rs  simple_workflow.rs  verification.rs
tightbeam/tests/instrumentation/: mod.rs  tests.rs
tightbeam/tests/jobs/: pipeline.rs
tightbeam/tests/payments/: cluster.rs  currency.rs  harness.rs  hives.rs  messages.rs  mod.rs  scenarios.rs  servlets.rs
tightbeam/tests/proof/: mod.rs
tightbeam/tests/schedulability/: edf_basic.rs  mod.rs  rma_basic.rs  violations.rs
tightbeam/tests/security/: algorithm_confusion.rs  certificate_forgery.rs  certificate_trust.rs  common.rs  confidentiality.rs  dos_attack.rs  downgrade_attack.rs  forward_secrecy.rs  mitm_attack.rs  mod.rs  nonce_reuse.rs  replay_attack.rs  transcript_binding.rs
tightbeam/tests/testing/: fuzz.rs  mod.rs
tightbeam/tests/tightbeam_core/: mod.rs  tests.rs  zero_queue.rs
tightbeam/tests/timing/: mod.rs  wcet.rs
tightbeam/tests/transport/: connection_pool.rs  connection_reuse.rs  mod.rs  mutual_auth.rs  negotiation.rs
tightbeam/tests/x509/: gate.rs  mod.rs
(+77 files in other folders)
