[workspace]
resolver = "2"
members = ["tightbeam", "tightbeam-derive"]

[workspace.package]
authors = ["Tanveer Wahid <tan@wahid.email>"]
version = "0.1.2"
edition = "2021"
rust-version = "1.85.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wahidgroup/tightbeam"
homepage = "https://github.com/wahidgroup/tightbeam"
documentation = "https://docs.rs/tightbeam"
readme = "README.md"
keywords = ["cryptography", "security", "messaging", "protocol"]
categories = ["cryptography", "network-programming"]

[workspace.dependencies]
tightbeam-derive = { version = "0.1.0", path = "tightbeam-derive" }

# RustCrypto dependencies
spki = { version = "0.7", default-features = false }
der = { version = "0.7", default-features = false, features = [
	"alloc",
	"derive",
	"oid",
] }
cms = { version = "0.2.3", default-features = false }
pkcs12 = { version = "0.1.0", default-features = false }
hkdf = { version = "0.12.4", default-features = false }
x509-cert = { version = "0.2.5", default-features = false, features = [
	"pem",
	"sct",
] }
hex-literal = { version = "1.0.0", default-features = false }
elliptic-curve = { version = "0.13.8", default-features = false }
zeroize = { version = "1.5", features = ["alloc", "zeroize_derive"] }
crypto-common = { version = "0.1.6", default-features = false, features = [
	"getrandom",
	"rand_core",
] }
aead = { version = "0.5.2", default-features = false, features = ["alloc"] }
signature = { version = "2.2.0", default-features = false, features = [
	"alloc",
] }
digest = { version = "0.10.7", default-features = false, features = ["alloc"] }
aes = { version = "0.8.4", default-features = false }
aes-gcm = { version = "0.10.3", default-features = false, features = [
	"aes",
	"alloc",
] }
aes-kw = { version = "0.2.1", default-features = false, features = ["alloc"] }
sha3 = { version = "0.10.8", default-features = false, features = ["oid"] }
ecdsa = { version = "0.16.9", default-features = false, features = [
	"signing",
	"digest",
	"der",
] }
k256 = { version = "0.13.4", default-features = false, features = [
	"alloc",
	"signature",
	"schnorr",
	"ecdsa",
	"pkcs8",
] }

# Non-RustCrypto dependencies
rayon = { version = "1.11.0", default-features = false }
rand_core = { version = "0.6", default-features = false, features = [
	"getrandom",
] }
tokio = { version = "1.48.0", default-features = false, features = ["full"] }
time = { version = "0.3.44", default-features = false, features = [
	"macros",
	"alloc",
] }

# Compression dependencies
zeekstd = { version = "0.6.1", default-features = false }

# Dev dependencies
paste = { version = "1.0.15" }
gumdrop = { version = "0.8.1" }
rand = { version = "0.9" }
fake = { version = "=4.3.0", features = [
	"derive",
	"uuid",
	"time",
	"url",
	"email_address",
] }

# Proc macro dependencies
proc-macro2 = "1.0.103"
quote = "1.0.41"
syn = { version = "2.0.108", features = ["full", "derive"] }

## Fuzzing dependencies
afl = { version = "0.17.0" }
