[package]
name = "tightbeam-os"
description = "A Baremetal Operating System for tightbeam"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
version = "0.0.1"

[dependencies]
