[package]
name = "tightbeam-rs"
authors.workspace = true
rust-version.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "A secure, high-performance messaging protocol library"

[lib]
name = "tightbeam"

[dependencies]
tightbeam-derive = { workspace = true, optional = true }

# RustCrypto dependencies
der = { workspace = true }
spki = { workspace = true }
cms = { workspace = true }
pkcs12 = { workspace = true }
x509-cert = { workspace = true, optional = true }
hex-literal = { workspace = true, optional = true }
zeroize = { workspace = true, optional = true }
elliptic-curve = { workspace = true }
crypto-common = { workspace = true, optional = true }
aead = { workspace = true, optional = true }
signature = { workspace = true, optional = true }
digest = { workspace = true, optional = true }
hkdf = { workspace = true, optional = true }
kem = { workspace = true, optional = true }
aes = { workspace = true, optional = true }
aes-gcm = { workspace = true, optional = true }
aes-kw = { workspace = true, optional = true }
sha3 = { workspace = true, optional = true }
ecdsa = { workspace = true, optional = true }
k256 = { workspace = true, optional = true }

# Non-RustCrypto dependencies
rand_core = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
time = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
# Macro helpers
paste = { workspace = true }

## Compression dependencies
zeekstd = { workspace = true, optional = true }

## Fuzzing dependencies
afl = { workspace = true, optional = true }

[dev-dependencies]
rand = { workspace = true }
tokio = { workspace = true, features = ["full"] }
fake = { workspace = true }
trybuild = { workspace = true }

[features]
default = ["full"]

full = [
	"std",
	"random",
	"hex",
	"zeroize",
	"builder",
	"policy",
	"router",
	"transport",
	"transport-policy",
	"transport-cms",
	"transport-ecies",
	"tcp",
	"aead",
	"x509",
	"signature",
	"digest",
	"aes-gcm",
	"sha3",
	"secp256k1",
	"kdf",
	"ecies",
	"ecdh",
	"derive",
	"tokio",
	"futures",
	"rayon",
	"constants",
	"zstd",
	"time",
	"standards-rfc",
	"standards-iso",
	"testing",
	"testing-csp",
	"testing-fdr",
	"testing-fuzz",
	"testing-schedulability",
	"testing-fault",
	"testing-fmea",
	"testing-timing",
	"instrument",
	"logging",
	"colony",
]

# Core features
constants = ["hex"]
crypto = ["random"]
builder = ["derive", "x509-cert/builder"]
policy = []
router = []
transport = ["cms/builder"]
doc = []
compress = ["tightbeam-derive?/compress"]
transport-policy = ["transport", "policy"]
transport-multiplex = ["transport"]
tcp = ["transport"]
colony = ["full"]
testing = ["std"]
testing-csp = ["testing"]
testing-fdr = ["testing", "testing-csp"]
testing-timing = ["testing", "time", "instrument"]
testing-schedulability = ["testing", "testing-timing"]
testing-fault = ["testing", "testing-fdr"]
testing-fmea = ["testing", "testing-fault"]
testing-fuzz = ["testing", "dep:afl"]
testing-fuzz-ijon = ["testing-fuzz"]
instrument = ["std", "sha3"]
logging = []
logging-stdout = ["logging", "std"]

# TODO
bitcoin = ["dep:k256"]

# RustCrypto features
hex = ["dep:hex-literal"]
aead = [
	"crypto",
	"random",
	"dep:aead",
	"dep:ecdsa",
	"dep:crypto-common",
	"tightbeam-derive?/aead",
	"aead/rand_core",
	"dep:aes",
	"dep:aes-kw",
]
signature = [
	"crypto",
	"tightbeam-derive?/signature",
	"dep:signature",
	"cms/signature",
	"x509-cert/signature",
]
digest = ["crypto", "dep:digest", "tightbeam-derive?/digest"]
x509 = ["crypto", "dep:x509-cert", "ecdsa/pem"]
kdf = ["crypto", "random", "zeroize", "digest", "dep:hkdf"]
ecies = ["crypto", "kdf", "aead", "k256/ecdh", "secp256k1", "sha3"]
ecdh = ["elliptic-curve/ecdh"]
kem = ["crypto", "dep:kem"]

## Security features
random = ["dep:rand_core"]
zeroize = ["dep:zeroize", "der/zeroize", "cms/zeroize", "aes-gcm?/zeroize"]

## Cryptographic algorithm features
aes-gcm = ["crypto", "aead", "dep:aes-gcm", "cms/aes"]
sha3 = ["crypto", "dep:sha3"]
secp256k1 = ["crypto", "dep:k256"]

## Handshake protocol features
transport-cms = [
	"transport",
	"transport-policy",
	"builder",
	"aead",
	"aes-gcm",
	"signature",
	"digest",
	"kdf",
	"kem",
	"sha3",
	"secp256k1",
	"x509",
	"ecdh",
]
transport-ecies = [
	"transport",
	"transport-policy",
	"builder",
	"ecies",
	"aead",
	"aes-gcm",
	"signature",
	"digest",
	"kdf",
	"sha3",
	"secp256k1",
	"x509",
	"ecdh",
]

# Derive macro support
derive = ["dep:tightbeam-derive"]

# Standard library support
std = [
	"der/std",
	"spki/std",
	"cms/std",
	"x509-cert/std",
	"kem?/std",
	"crypto-common?/std",
	"zeroize?/std",
	"digest?/std",
	"aead?/std",
	"signature?/std",
	"aes-gcm?/std",
	"sha3?/std",
	"k256?/std",
	"zeekstd?/std",
	"time?/std",
	"rand_core?/std",
]

# NON-RustCrypto features
time = ["dep:time", "der/time"]
tokio = ["dep:tokio", "std"]
futures = ["dep:futures"]
rayon = ["dep:rayon"]
zstd = ["dep:zeekstd", "compress", "std"]
# TODO
gzip = ["compress"]

# Standards
standards = []
standards-rfc = ["standards"]
standards-iso = ["standards"]

# AFL fuzz targets - each as a separate binary
# These are built with: RUSTFLAGS="--cfg fuzzing" cargo afl build --bin <name> --features "std,testing-fuzz"
# Standard AFL.rs organization: fuzz targets are separate binaries, not tests
[[bin]]
name = "fuzz_simple_workflow"
path = "fuzz/simple_workflow.rs"
required-features = ["std", "testing-fuzz"]

[[bin]]
name = "fuzz_complex_workflow"
path = "fuzz/complex_workflow.rs"
required-features = ["std", "testing-fuzz"]

[[bin]]
name = "fuzz_verification"
path = "fuzz/verification.rs"
required-features = ["std", "testing-fuzz"]

[[bin]]
name = "fuzz_chess"
path = "fuzz/chess/mod.rs"
required-features = ["std", "testing-fuzz"]
